fix text wrap mobile

--- a/react/src/components/molecules/Tooltip/style.scss
+++ b/react/src/components/molecules/Tooltip/style.scss
@@ -9,4 +9,23 @@
       margin-left: .2em;
     }
   }
+
+  &__inner--inline {
+    display: inline;
+    label {
+      display: inline;
+    }
+
+    &__container{
+      label.ma__tooltip__close {
+        display: block;
+      }
+    }
+
+    // &__modal {
+    //   @media($bp-small-max) {
+    //     width: 100%;
+    //   }
+    // }
+  }
 }
